--- a/index.html
+++ b/index.html
@@ -31,8 +31,6 @@
       <canvas id="usersChart"></canvas>
     </div>
 
-    <script>
-      
-    </script>
+    <script src="./chart.js"></script>
   </body>
 </html>
